# yolo-seg-ort

./: pyproject.toml
test/: video_demo.py
yolo_seg_ort/: core.py
